@@ -1,4 +1,6 @@
 {{$NEXT}}
+  - Breaking change: no_auto_abbrev is no longer included in the default option
+    set, in order to better match how options are handled by modern unix tools.
   - Ignore :config import parameter if specified accidentally
 
 0.004     2015-09-16 20:28:17 EDT
